2003-12-29  Andreas Schwab  <schwab@suse.de>

	* stdio-common/Makefile (CFLAGS-errlist.c, CFLAGS-siglist.c): Add
	$(fno_unit_at_a_time) to avoid reordering assembler output.

2003-12-29  Jakub Jelinek  <jakub@redhat.com>

	* posix/regexec.c (re_copy_regs): Revert comment change.
	Avoid memory leak if realloc fails.
	(proceed_next_node): Return -2 if re_node_set_insert fails.
	Return -2 if push_fail_stack fails.
	(push_fail_stack): Change fs->alloc only after successful realloc.
	(pop_fail_stack): Formatting.
	(set_regs): If proceed_next_node returns -2, free eps_via_nodes and fs.
	(check_arrival_add_next_nodes): Merge identical statements
	from if branches.

	* signal/Makefile (tests): Add tst-raise.
	* signal/tst-raise.c: New test.

2003-12-28  Ulrich Drepper  <drepper@redhat.com>

	* posix/regcomp.c (mark_opt_subexp_iter): Declare IDX as int.

	* posix/regexec.c (re_copy_regs): Fix testing for failed allocation.
	(push_fail_stack): Add missing check for failed memory allocation.

	* libio/libio.h: Use __builtin_expect in _IO_getc_unlocked,
	_IO_peekc_unlocked, _IO_putc_unlocked, _IO_getwc_unlocked, and
	_IO_putwc_unlocked.

2003-12-28  Andreas Jaeger  <aj@suse.de>

	* sysdeps/ieee754/dbl-64/e_j0.c (__ieee754_y0): Raise only
	overflow for 0 as argument. Raise Invalid exception for negative args.
	* sysdeps/ieee754/dbl-64/e_jn.c (__ieee754_yn): Likewise.
	* sysdeps/ieee754/dbl-64/e_j1.c (__ieee754_y0): Likewise.
	* sysdeps/ieee754/ldb-128/e_jnl.c (__ieee754_ynl): Likewise.
	* sysdeps/ieee754/ldb-128/e_j0l.c (__ieee754_y0l): Likewise.
	* sysdeps/ieee754/ldb-128/e_j1l.c (__ieee754_y1l): Likewise.
	* sysdeps/ieee754/ldb-96/e_jnl.c (__ieee754_ynl): Likewise.
	* sysdeps/ieee754/ldb-96/e_j0l.c (__ieee754_y0l): Likewise.
	* sysdeps/ieee754/ldb-96/e_j1l.c (__ieee754_y1l): Likewise.
	* sysdeps/ieee754/flt-32/e_jnf.c (__ieee754_ynf): Likewise.
	* sysdeps/ieee754/flt-32/e_j0f.c (__ieee754_y0f): Likewise.
	* sysdeps/ieee754/flt-32/e_j1f.c (__ieee754_y1f): Likewise.
