@@ -297,6 +297,10 @@ typedef struct
 #define SHN_UNDEF	0		/* Undefined section */
 #define SHN_LORESERVE	0xff00		/* Start of reserved indices */
 #define SHN_LOPROC	0xff00		/* Start of processor-specific */
+#define SHN_BEFORE	0xff00		/* Order section before all others
+					   (Solaris).  */
+#define SHN_AFTER	0xff01		/* Order section after all others
+					   (Solaris).  */
 #define SHN_HIPROC	0xff1f		/* End of processor-specific */
 #define SHN_LOOS	0xff20		/* Start of OS-specific */
 #define SHN_HIOS	0xff3f		/* End of OS-specific */
@@ -357,6 +361,10 @@ typedef struct
 #define SHF_TLS		     (1 << 10)	/* Section hold thread-local data.  */
 #define SHF_MASKOS	     0x0ff00000	/* OS-specific.  */
 #define SHF_MASKPROC	     0xf0000000	/* Processor-specific */
+#define SHF_ORDERED	     (1 << 30)	/* Special ordering requirement
+					   (Solaris).  */
+#define SHF_EXCLUDE	     (1 << 31)	/* Section is excluded unless refereced
+					   or allocated (Solaris).  */
 
 /* Section group handling.  */
 #define GRP_COMDAT	0x1		/* Mark group as COMDAT.  */
@@ -1126,7 +1134,7 @@ typedef struct
 
 /* Legal values for ST_TYPE subfield of st_info (symbol type).  */
 
-#define STT_REGISTER	13		/* Global register reserved to app. */
+#define STT_SPARC_REGISTER	13	/* Global register reserved to app. */
 
 /* Values for Elf64_Ehdr.e_flags.  */
 
